# fastapirinha

./: .env  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  gconf.py  init_db.py  nginx.conf  pyproject.toml
load-test/user-files/results/v1/: index.html  note.txt  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/v1/js/: all_sessions.js  global_stats.json  stats.js  stats.json
load-test/user-files/results/v2/: index.html  nota.txt  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/v2/js/: all_sessions.js  global_stats.json  stats.js  stats.json
load-test/user-files/results/v3/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
load-test/user-files/results/v3/js/: all_sessions.js  global_stats.json  stats.js  stats.json
migrations/: env.py
migrations/versions/: 504070a136b8_fixed_tipo_of_transaction.py  dc582797aaa0_create_transactions_table.py  dfaae8c27a54_add_fk_in_transactions.py  f2d4c59e1a1a_create_client_table.py  fe8c234fc8f7_fixed_descricao.py
settings/: settings.py
src/: app.py  db_session.py  models.py  repository.py  schemas.py  services.py
