[tool.poetry]
name = "rinha-backend-2024q1-fastapizinha"
version = "0.1.0"
description = ""
authors = ["Samuel Felipe Castro Fernandes"]
readme = "README.md"

[tool.ruff]
line-length = 79
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff . && blue --check . --diff && isort --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn src.app:app --reload --port 9999'
pre_test = 'task lint'

[tool.blue]
extend-exclude = '(migrations/)'

[tool.poetry.dependencies]
python = "3.11.*" 
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.2.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
